[package]
name = "tp2p"
version = "0.0.1"
authors = ["dgcampbe <dgcampbe@gmail.com>"]
description = "tp2p"
# documentation = ""
readme = "readme.md"
# homepage = ""
# repository = ""
# license = ""
# keywords = []
# categories = []
# build = "build.rs"
publish = false

[dependencies]
merkle-cbt = "^0.2.2"
log = "^0.4.20"
ring = "^0.16.15"
rand = "^0.7.3"
time = "^0.2.17"
chrono = "^0.4.20"
error-chain = "^0.12.4"
rayon = "^1.8.1"
pyo3 = "^0.11.1"
# raylib = "^3.0"
